--- a/src/index.css
+++ b/src/index.css
@@ -9,5 +9,9 @@ body{
 }
 
 .container{
-    margin: 1rem 1rem;
+     margin:  auto;
+    padding: 2rem;
+    display: flex;
+    gap: 1rem;
+    flex-wrap: wrap;
 }
