--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    transition: all 0.3s ease;
 }
 
 body{
     background-color: rgb(224, 224, 224);
+    font-family: 'Roboto',sans-serif;
 }
 
 .container{
@@ -14,4 +16,10 @@ body{
     display: flex;
     gap: 1rem;
     flex-wrap: wrap;
+}
+
+
+.text-center{
+    text-align: center;
+    margin-top: 1rem;
 }
